fixed container width popping out of the screen

--- a/src.css
+++ b/src.css
@@ -25,12 +25,12 @@ h6{
 
 /* content container */
 #container {
-    @apply w-screen m-0 grid grid-cols-4;
+    @apply max-w-fit m-0 grid grid-cols-4;
 }
 
 /* left sidebar classes */
 #left-sidebar {
-    @apply m-2 col-span-4 lg:col-span-1 lg:text-left;
+    @apply mx-2 col-span-4 lg:col-span-1 lg:text-left;
 }
 
 #left-sidebar img {
@@ -62,7 +62,7 @@ h6{
 }
 
 .site-news-post {
-    @apply mb-8 mx-4 pl-2 border-l-4 border-double border-slate-300;
+    @apply mb-8 mx-2 pl-2 border-l-4 border-double border-slate-700;
 }
 
 .site-news-post h2 {
@@ -120,11 +120,11 @@ h6{
 
 /* right sidebar classes */
 #right-sidebar {
-    @apply col-span-4 lg:col-span-1 px-2 text-right;
+    @apply mx-2 col-span-4 lg:col-span-1 text-right;
 }
 
 .micro-post {
-    @apply mb-8 mx-4 pr-2 border-r-4 border-double border-slate-300;
+    @apply mb-8 mx-2 pr-2 border-r-4 border-double border-slate-700;
 }
 
 .micro-post h2 {
